infra/k8s/auth-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
